--- a/benchmark.html
+++ b/benchmark.html
@@ -361,7 +361,7 @@
 
 
 
-			<h2>Results of other benchmarks</h2>
+			<h2>Results of Independent Training Track</h2>
 
 			<table id="t02" class="sortable">
 			<tbody>
