--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div style="text-align:justify">Recent years have witnessed significant advances in image deraining due to the kinds of effective image priors and deep learning models. As each deraining approach has individual settings (e.g., training and test datasets, evaluation criteria), how to fairly evaluate existing approaches comprehensively is not a trivial task. Although existing surveys aim to review of image deraining approaches comprehensively, few of them focus on providing unify evaluation settings to examine the deraining capability and practicality evaluation. In this paper, we provide a comprehensive review of existing image deraining method and provide a unify evaluation setting to evaluate the performance of image deraining methods. We construct a new high-quality benchmark named HQ-RAIN to further conduct extensive evaluation, consisting of 5,000 paired high-resolution synthetic images with higher harmony and realism. We also discuss the existing challenges and highlight several future research opportunities worth exploring. To facilitate the reproduction and tracking of the latest deraining technologies for general users, we build an online platform to provide the off-the-shelf toolkit, involving the large-scale performance evaluation. This online platform and the proposed new benchmark are publicly available and will be regularly updated at http://www.deraining.tech/.</div>
 			</p>
 
-			<h1>Papers</h1>
+			<h1>Paper</h1>
 			<p>
 				Xiang Chen, Jinshan Pan, Jiangxin Dong, Jinhui Tang. "Towards Unified Deep Image Deraining: A Survey and A New Benchmark", arXiv preprint arXiv:2310.03535 (arXiv), 2023.
 			</p>
@@ -132,6 +132,7 @@
 
 			<h1>News</h1>
 			<ul>
+			<li>2023.10.06: The paper is available [<a href="https://arxiv.org/abs/2310.03535" target="_blank" rel="noopener"><b>here</b></a>].</li>
 			<li>2023.10.01: The online platform is avaliable.</li>
 			</ul>
 			
