--- a/benchmark.html
+++ b/benchmark.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
-		<title>Deraining</title>
+		<title>Research on Deraining</title>
 		<!-- <link rel="shortcut icon" href="./favicon.ico" type="image/ico" /> -->
 
 		<!--<link rel="stylesheet" href="css/reset.css"/>  -->
