--- a/benchmark.html
+++ b/benchmark.html
@@ -131,7 +131,7 @@
 				<td>0.683</td>
 			</tr>
 			<tr>
-				<td>DerainNet</td>
+				<td><a href="https://ieeexplore.ieee.org/abstract/document/7893758" target="_blank" rel="noopener">DerainNet</a></td>
 				<td>22.77</td>
 				<td>0.810</td>
 				<td>14.92</td>
@@ -146,7 +146,7 @@
 				<td>0.796</td>
 			</tr>
 			<tr>
-				<td>SIRR</td>
+				<td><a href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Wei_Semi-Supervised_Transfer_Learning_for_Image_Rain_Removal_CVPR_2019_paper.pdf" target="_blank" rel="noopener">SIRR</a></td>
 				<td>22.35</td>
 				<td>0.788</td>
 				<td>16.56</td>
@@ -161,7 +161,7 @@
 				<td>0.744</td>
 			</tr>
 			<tr>
-				<td>DIDMDN</td>
+				<td><a href="https://arxiv.org/abs/1802.07412" target="_blank" rel="noopener">DID-MDN</a></td>
 				<td>22.56</td>
 				<td>0.818</td>
 				<td>17.35</td>
@@ -176,7 +176,7 @@
 				<td>0.770</td>
 			</tr>
 			<tr>
-				<td>UMRL</td>
+				<td><a href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Yasarla_Uncertainty_Guided_Multi-Scale_Residual_Learning-Using_a_Cycle_Spinning_CNN_for_CVPR_2019_paper.pdf" target="_blank" rel="noopener">UMRL</a></td>
 				<td>24.41</td>
 				<td>0.829</td>
 				<td>26.01</td>
@@ -191,7 +191,7 @@
 				<td>0.880</td>
 			</tr>
 			<tr>
-				<td>RESCAN</td>
+				<td><a href="https://arxiv.org/pdf/1807.05698.pdf" target="_blank" rel="noopener">RESCAN</a></td>
 				<td>25.00</td>
 				<td>0.835</td>
 				<td>26.36 </td>
@@ -206,7 +206,7 @@
 				<td>0.857</td>
 			</tr>
 			<tr>
-				<td>PReNet</td>
+				<td><a href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Ren_Progressive_Image_Deraining_Networks_A_Better_and_Simpler_Baseline_CVPR_2019_paper.pdf" target="_blank" rel="noopener">PReNet</a></td>
 				<td>24.81</td>
 				<td>0.851</td>
 				<td>26.77</td>
@@ -221,7 +221,7 @@
 				<td>0.897</td>
 			</tr>
 			<tr>
-				<td>MSPFN</td>
+				<td><a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Jiang_Multi-Scale_Progressive_Fusion_Network_for_Single_Image_Deraining_CVPR_2020_paper.pdf" target="_blank" rel="noopener">MSPFN</a></td>
 				<td>27.50</td>
 				<td>0.876</td>
 				<td>28.66</td>
@@ -236,7 +236,7 @@
 				<td>0.903</td>
 			</tr>
 			<tr>
-				<td>MPRNet</td>
+				<td><a href="http://openaccess.thecvf.com/content/CVPR2021/papers/Zamir_Multi-Stage_Progressive_Image_Restoration_CVPR_2021_paper.pdf" target="_blank" rel="noopener">MPRNet</a></td>
 				<td>30.27</td>
 				<td>0.897</td>
 				<td>30.41</td>
@@ -251,7 +251,7 @@
 				<td>0.921</td>
 			</tr>
 			<tr>
-				<td>HINet</td>
+				<td><a href="https://openaccess.thecvf.com/content/CVPR2021W/NTIRE/papers/Chen_HINet_Half_Instance_Normalization_Network_for_Image_Restoration_CVPRW_2021_paper.pdf" target="_blank" rel="noopener">HINet</a></td>
 				<td>30.26</td>
 				<td>0.905</td>
 				<td>30.63</td>
@@ -266,7 +266,7 @@
 				<td>0.925</td>
 			</tr>
 			<tr>
-				<td>SPAIR</td>
+				<td><a href="http://openaccess.thecvf.com/content/ICCV2021/papers/Purohit_Spatially-Adaptive_Image_Restoration_Using_Distortion-Guided_Networks_ICCV_2021_paper.pdf" target="_blank" rel="noopener">SPAIR</a></td>
 				<td>30.35</td>
 				<td>0.909</td>
 				<td>30.95</td>
@@ -281,7 +281,7 @@
 				<td>0.926</td>
 			</tr>
 			<tr>
-				<td>KiT</td>
+				<td><a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Lee_KNN_Local_Attention_for_Image_Restoration_CVPR_2022_paper.pdf" target="_blank" rel="noopener">KiT</a></td>
 				<td>30.26</td>
 				<td>0.904</td>
 				<td>30.47</td>
@@ -296,7 +296,7 @@
 				<td>0.929</td>
 			</tr>
 			<tr>
-				<td>DGUNet</td>
+				<td><a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Mou_Deep_Generalized_Unfolding_Networks_for_Image_Restoration_CVPR_2022_paper.pdf" target="_blank" rel="noopener">DGUNet</a></td>
 				<td>30.32</td>
 				<td>0.899</td>
 				<td>30.66</td>
@@ -311,7 +311,7 @@
 				<td>0.923</td>
 			</tr>
 			<tr>
-				<td>DGUNet+</td>
+				<td><a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Mou_Deep_Generalized_Unfolding_Networks_for_Image_Restoration_CVPR_2022_paper.pdf" target="_blank" rel="noopener">DGUNet+</a></td>
 				<td>30.86</td>
 				<td>0.907</td>
 				<td>31.06</td>
@@ -326,7 +326,7 @@
 				<td>0.927</td>
 			</tr>
 			<tr>
-				<td>MAXIM-2S</td>
+				<td><a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Tu_MAXIM_Multi-Axis_MLP_for_Image_Processing_CVPR_2022_paper.pdf" target="_blank" rel="noopener">MAXIM-2S</a></td>
 				<td>31.17</td>
 				<td>0.922</td>
 				<td>30.81</td>
@@ -341,7 +341,7 @@
 				<td>0.933</td>
 			</tr>
 			<tr>
-				<td>Restormer</td>
+				<td><a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Zamir_Restormer_Efficient_Transformer_for_High-Resolution_Image_Restoration_CVPR_2022_paper.pdf" target="_blank" rel="noopener">Restormer</a></td>
 				<td>32.00</td>
 				<td>0.923</td>
 				<td>31.46</td>
