--- a/survey/index.html
+++ b/survey/index.html
@@ -1200,6 +1200,20 @@
 </div>     
 
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+    <span class="article-metadata li-cite-author">
+    <span >
+      Progressive Image Deraining Networks: A Better and Simpler Baseline
+    </span>
+   <p> 
+ <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Ren_Progressive_Image_Deraining_Networks_A_Better_and_Simpler_Baseline_CVPR_2019_paper.pdf" target="_blank" rel="noopener">CVPR'19</a>
+ <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/csdwren/PReNet" target="_blank" rel="noopener">PReNet Code</a>
+   </p>
+  </div>
+ </div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
