--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 
 			<h1>News</h1>
 			<ul>
+                        <li>2023.11.01: <b>More resources will be available after the DDL of CVPR. Stay Focused! </b> </li>
 			<li>2023.10.06: The paper is available [<a href="https://arxiv.org/abs/2310.03535" target="_blank" rel="noopener">here</a>].</li>
 			<li>2023.10.01: The online platform is avaliable.</li>
 			</ul>
