--- a/survey/index.html
+++ b/survey/index.html
@@ -169,7 +169,7 @@
   
 <!-- publications -->
 <div class="universal-wrapper pt-3">
-  <h1>Related Work</h1> <h3>Last updated: Oct 5, 2023</h3>
+  <h1>Related Work</h1> <h3>Last updated: Nov 7, 2023</h3>
 </div>
 
 <div class="universal-wrapper pt-1">
@@ -236,6 +236,19 @@
 
       <div id="container-publications">
 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    PromptRestorer: A Prompting Image Restoration Method with Degradation Perception
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openreview.net/pdf?id=nIaNgaQvsV" target="_blank" rel="noopener">NeurIPS'23</a>
+  </p>
+ </div>
+</div> 
 
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
