--- a/benchmark.html
+++ b/benchmark.html
@@ -355,7 +355,36 @@
 				<td>33.96</td>
 				<td>0.935</td>
 			</tr>
-
+			<tr>
+				<td><a href="https://openreview.net/pdf?id=tyZ1ChGZIKO" target="_blank" rel="noopener">PromptRestorer</a></td>
+				<td>31.47</td>
+				<td>0.919</td>
+				<td>31.90</td>
+				<td>0.908</td>
+				<td>38.21</td>
+				<td>0.974</td>
+				<td>33.69</td>
+				<td>0.937</td>
+				<td>32.55</td>
+				<td>0.911</td>
+				<td>33.56</td>
+				<td>0.929</td>
+			</tr>
+			<tr>
+				<td><a href="https://openreview.net/pdf?id=nIaNgaQvsV" target="_blank" rel="noopener">PromptRestorer</a></td>
+				<td>31.84</td>
+				<td>0.920</td>
+				<td>31.72</td>
+				<td>0.908</td>
+				<td>39.04</td>
+				<td>0.977</td>
+				<td>34.40</td>
+				<td>0.947</td>
+				<td>33.27</td>
+				<td>0.928</td>
+				<td>34.05</td>
+				<td>0.936</td>
+			</tr>
 			</tbody>
 			</table>
 
