--- a/survey/index.html
+++ b/survey/index.html
@@ -264,6 +264,21 @@
 </div> 
 
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
+  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+    <span class="article-metadata li-cite-author">
+    <span >
+    Selective Frequency Network for Image Restoration
+    </span>
+   <p> 
+ <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openreview.net/pdf?id=tyZ1ChGZIKO" target="_blank" rel="noopener">ICLR'23</a>
+ <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/c-yn/SFNet" target="_blank" rel="noopener">SFNet Code</a>
+   </p>
+  </div>
+ </div> 
+
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
    <span class="article-metadata li-cite-author">
