--- a/benchmark.html
+++ b/benchmark.html
@@ -356,7 +356,7 @@
 				<td>0.935</td>
 			</tr>
 			<tr>
-				<td><a href="https://openreview.net/pdf?id=tyZ1ChGZIKO" target="_blank" rel="noopener">PromptRestorer</a></td>
+				<td><a href="https://openreview.net/pdf?id=tyZ1ChGZIKO" target="_blank" rel="noopener">SFNet</a></td>
 				<td>31.47</td>
 				<td>0.919</td>
 				<td>31.90</td>
