--- a/benchmark.html
+++ b/benchmark.html
@@ -78,7 +78,7 @@
 
 			<h1>Leaderboard</h1>
 
-			<h2>Results of Mixed Training Track</h2>
+			<h2>Results of Mixed Training Track (Rain13K)</h2>
 
 			<table id="t01" class="sortable">
 			<tbody>
