--- a/benchmark.html
+++ b/benchmark.html
@@ -443,7 +443,7 @@
 				<td>0.7496</td>
 			</tr>
 			<tr>
-				<td>DDN</td>
+				<td><a href="https://openaccess.thecvf.com/content_cvpr_2017/papers/Fu_Removing_Rain_From_CVPR_2017_paper.pdf" target="_blank" rel="noopener">DDN</a></td>
 				<td>34.68</td>
 				<td>0.9671</td>
 				<td>26.05</td>
@@ -458,7 +458,7 @@
 				<td>0.9068</td>
 			</tr>
 			<tr>
-				<td>DID-MDN</td>
+				<td><a href="https://arxiv.org/abs/1802.07412" target="_blank" rel="noopener">DID-MDN</a></td>
 				<td>35.40</td>
 				<td>0.9618</td>
 				<td>26.61</td>
@@ -473,7 +473,7 @@
 				<td>0.9195</td>
 			</tr>
 			<tr>
-				<td>RESCAN</td>
+				<td><a href="https://arxiv.org/pdf/1807.05698.pdf" target="_blank" rel="noopener">RESCAN</a></td>
 				<td>36.09</td>
 				<td>0.9697</td>
 				<td>26.75</td>
@@ -488,7 +488,7 @@
 				<td>0.9304</td>
 			</tr>
 			<tr>
-				<td>NLEDN</td>
+				<td><a href="https://arxiv.org/pdf/1808.01491.pdf" target="_blank" rel="noopener">NLEDN</a></td>
 				<td>39.13</td>
 				<td>0.9821</td>
 				<td>29.79</td>
@@ -503,7 +503,7 @@
 				<td>0.9528</td>
 			</tr>
 			<tr>
-				<td>JORDER-E</td>
+				<td><a href="https://ieeexplore.ieee.org/abstract/document/8627954" target="_blank" rel="noopener">JORDER-E</a></td>
 				<td>37.25</td>
 				<td>0.9752</td>
 				<td>29.35</td>
@@ -518,7 +518,7 @@
 				<td>0.9456</td>
 			</tr>
 			<tr>
-				<td>ID-CGAN</td>
+				<td><a href="https://ieeexplore.ieee.org/abstract/document/8727938/" target="_blank" rel="noopener">ID-CGAN</a></td>
 				<td>35.19</td>
 				<td>0.9694</td>
 				<td>25.02</td>
@@ -533,7 +533,7 @@
 				<td>0.9225</td>
 			</tr>
 			<tr>
-				<td>SIRR</td>
+				<td><a href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Wei_Semi-Supervised_Transfer_Learning_for_Image_Rain_Removal_CVPR_2019_paper.pdf" target="_blank" rel="noopener">SIRR</a></td>
 				<td>34.75</td>
 				<td>0.9690</td>
 				<td>26.55</td>
@@ -548,7 +548,7 @@
 				<td>0.9095</td>
 			</tr>
 			<tr>
-				<td>PReNet</td>
+				<td><a href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Ren_Progressive_Image_Deraining_Networks_A_Better_and_Simpler_Baseline_CVPR_2019_paper.pdf" target="_blank" rel="noopener">PReNet</a></td>
 				<td>37.80</td>
 				<td>0.9814</td>
 				<td>29.04</td>
@@ -563,7 +563,7 @@
 				<td>0.9512</td>
 			</tr>
 			<tr>
-				<td>SPANet</td>
+				<td><a href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Spatial_Attentive_Single-Image_Deraining_With_a_High_Quality_Real_Rain_CVPR_2019_paper.pdf" target="_blank" rel="noopener">SPANet</a></td>
 				<td>35.79</td>
 				<td>0.9653</td>
 				<td>26.27</td>
@@ -578,7 +578,7 @@
 				<td>0.9347</td>
 			</tr>
 			<tr>
-				<td>FBL</td>
+				<td><a href="https://ojs.aaai.org/index.php/AAAI/article/view/6954/6808" target="_blank" rel="noopener">FBL</a></td>
 				<td>39.02</td>
 				<td>0.9827</td>
 				<td>30.07</td>
@@ -593,7 +593,7 @@
 				<td>0.9465</td>
 			</tr>
 			<tr>
-				<td>MSPFN</td>
+				<td><a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Jiang_Multi-Scale_Progressive_Fusion_Network_for_Single_Image_Deraining_CVPR_2020_paper.pdf" target="_blank" rel="noopener">MSPFN</a></td>
 				<td>38.58</td>
 				<td>0.9827</td>
 				<td>29.36</td>
@@ -608,7 +608,7 @@
 				<td>0.9517</td>
 			</tr>
 			<tr>
-				<td>RCDNet</td>
+				<td><a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_A_Model-Driven_Deep_Neural_Network_for_Single_Image_Rain_Removal_CVPR_2020_paper.pdf" target="_blank" rel="noopener">RCDNet</a></td>
 				<td>39.17</td>
 				<td>0.9885</td>
 				<td>30.24</td>
@@ -623,7 +623,7 @@
 				<td>0.9554</td>
 			</tr>
 			<tr>
-				<td>Syn2Real</td>
+				<td><a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Yasarla_Syn2Real_Transfer_Learning_for_Image_Deraining_Using_Gaussian_Processes_CVPR_2020_paper.pdf" target="_blank" rel="noopener">Syn2Real</a></td>
 				<td>35.92</td>
 				<td>0.9709</td>
 				<td>27.90</td>
@@ -638,7 +638,7 @@
 				<td>0.9301</td>
 			</tr>
 			<tr>
-				<td>SGCN</td>
+				<td><a href="https://xueyangfu.github.io/paper/2021/IJCV/Paper.pdf" target="_blank" rel="noopener">SGCN</a></td>
 				<td>37.95</td>
 				<td>0.9822</td>
 				<td>29.35</td>
@@ -653,7 +653,7 @@
 				<td>0.9516</td>
 			</tr>
 			<tr>
-				<td>MPRNet</td>
+				<td><a href="http://openaccess.thecvf.com/content/CVPR2021/papers/Zamir_Multi-Stage_Progressive_Image_Restoration_CVPR_2021_paper.pdf" target="_blank" rel="noopener">MPRNet</a></td>
 				<td>39.47</td>
 				<td>0.9825</td>
 				<td>30.67</td>
@@ -668,7 +668,7 @@
 				<td>0.9543</td>
 			</tr>
 			<tr>
-				<td>DualGCN</td>
+				<td><a href="https://ojs.aaai.org/index.php/AAAI/article/view/16224/16031" target="_blank" rel="noopener">DualGCN</a></td>
 				<td>40.73</td>
 				<td>0.9886</td>
 				<td>31.15</td>
@@ -683,7 +683,7 @@
 				<td>0.9604</td>
 			</tr>
 			<tr>
-				<td>SPDNet</td>
+				<td><a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Yi_Structure-Preserving_Deraining_With_Residue_Channel_Prior_Guidance_ICCV_2021_paper.pdf" target="_blank" rel="noopener">SPDNet</a></td>
 				<td>40.50</td>
 				<td>0.9875</td>
 				<td>31.28</td>
@@ -698,7 +698,7 @@
 				<td>0.9594</td>
 			</tr>
 			<tr>
-				<td>Uformer</td>
+				<td><a href="https://arxiv.org/abs/2106.03106" target="_blank" rel="noopener">Uformer</a></td>
 				<td>40.20</td>
 				<td>0.9860</td>
 				<td>30.80</td>
@@ -713,7 +713,7 @@
 				<td>0.9609</td>
 			</tr>
 			<tr>
-				<td>Restormer</td>
+				<td><a href="https://arxiv.org/abs/2111.09881" target="_blank" rel="noopener">Restormer</a></td>
 				<td>40.99</td>
 				<td>0.9890</td>
 				<td>32.00</td>
@@ -728,7 +728,7 @@
 				<td>0.9670</td>
 			</tr>
 			<tr>
-				<td>IDT</td>
+				<td><a href="https://ieeexplore.ieee.org/document/9798773" target="_blank" rel="noopener">IDT</a></td>
 				<td>40.74</td>
 				<td>0.9884</td>
 				<td>32.10</td>
@@ -743,7 +743,7 @@
 				<td>0.9666</td>
 			</tr>
 			<tr>
-				<td>HCN</td>
+				<td><a href="https://ieeexplore.ieee.org/document/10035447" target="_blank" rel="noopener">HCN</a></td>
 				<td>41.31</td>
 				<td>0.9892</td>
 				<td>31.34</td>
@@ -758,7 +758,7 @@
 				<td>0.9634</td>
 			</tr>
 			<tr>
-				<td>DRSformer</td>
+				<td><a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Chen_Learning_a_Sparse_Transformer_Network_for_Effective_Image_Deraining_CVPR_2023_paper.pdf" target="_blank" rel="noopener">DRSformer</a></td>
 				<td>41.23</td>
 				<td>0.9894</td>
 				<td>32.17</td>
