--- a/benchmark.html
+++ b/benchmark.html
@@ -70,8 +70,26 @@
 		<div class="body-container">
 			<h1>Download</h1>
 
-			<p>More details are coming soon!</p>
-						
+			<p>
+				<b>Mixed Training Track</b> (Rain13K benchmark)
+				[
+				<b><a href="https://drive.google.com/file/d/14BidJeG4nSNuFNFDf99K-7eErCq4i47t/view" target="_blank">Training Set</a></b> | 
+				<b><a href="https://drive.google.com/file/d/1P_-RAvltEoEhfT-9GrWRdpEi6NSswTs8/view" target="_blank">Testing Set</a></b> 
+                ]
+			</p>
+			
+			<p>
+				<b>Independent Training Track</b>
+				[
+				<b><a href="https://pan.baidu.com/s/1rTb4qU3fCEA4MRpQss__DA?pwd=s2yx" target="_blank">Rain200L benchmark</a></b> | 
+				<b><a href="https://pan.baidu.com/s/1KK8R2bPKgcOX8gMXSuKtCQ?pwd=z9br" target="_blank">Rain200H benchmark</a></b> |
+				<b><a href="https://pan.baidu.com/s/1aPFJExxxTBOzJjngMAOQDA?pwd=5luo" target="_blank">DID-Data benchmark</a></b> |
+				<b><a href="https://pan.baidu.com/s/1g_m7RfSUJUtknlWugO1nrw?pwd=ldzo" target="_blank">DDN-Data benchmark</a></b> |
+				<b><a href="https://pan.baidu.com/s/1YfxC5OvgYcQCffEttFz8Kg?pwd=yjow" target="_blank">SPA-Data benchmark</a></b> 
+                ]
+			</p>			
+
+
 			<h1>Upload your results</h1>
 			
 			<a href="submit.html" class="button">Click here to submit your results</a>
@@ -775,11 +793,6 @@
 
 			</tbody>
 			</table>
-
-
-			
-
-
 
 		</div>
 
