--- a/benchmark.html
+++ b/benchmark.html
@@ -81,11 +81,11 @@
 			<p>
 				<b>Independent Training Track</b>
 				[
-				<b><a href="https://pan.baidu.com/s/1rTb4qU3fCEA4MRpQss__DA?pwd=s2yx" target="_blank">Rain200L benchmark</a></b> | 
-				<b><a href="https://pan.baidu.com/s/1KK8R2bPKgcOX8gMXSuKtCQ?pwd=z9br" target="_blank">Rain200H benchmark</a></b> |
-				<b><a href="https://pan.baidu.com/s/1aPFJExxxTBOzJjngMAOQDA?pwd=5luo" target="_blank">DID-Data benchmark</a></b> |
-				<b><a href="https://pan.baidu.com/s/1g_m7RfSUJUtknlWugO1nrw?pwd=ldzo" target="_blank">DDN-Data benchmark</a></b> |
-				<b><a href="https://pan.baidu.com/s/1YfxC5OvgYcQCffEttFz8Kg?pwd=yjow" target="_blank">SPA-Data benchmark</a></b> 
+				<b><a href="https://pan.baidu.com/s/1rTb4qU3fCEA4MRpQss__DA?pwd=s2yx" target="_blank">Rain200L</a></b> | 
+				<b><a href="https://pan.baidu.com/s/1KK8R2bPKgcOX8gMXSuKtCQ?pwd=z9br" target="_blank">Rain200H</a></b> |
+				<b><a href="https://pan.baidu.com/s/1aPFJExxxTBOzJjngMAOQDA?pwd=5luo" target="_blank">DID-Data</a></b> |
+				<b><a href="https://pan.baidu.com/s/1g_m7RfSUJUtknlWugO1nrw?pwd=ldzo" target="_blank">DDN-Data</a></b> |
+				<b><a href="https://pan.baidu.com/s/1YfxC5OvgYcQCffEttFz8Kg?pwd=yjow" target="_blank">SPA-Data</a></b> 
                 ]
 			</p>			
 
