--- a/index.html
+++ b/index.html
@@ -132,13 +132,14 @@
 
 			<h1>News</h1>
 			<ul>
-                        <li>2023.11.01: <b>More resources will be available after the DDL of CVPR. Stay Focused! </b> </li>
+            <li>2023.11.01: <b>More resources will be available after the DDL of CVPR. Stay Focused! </b> </li>
 			<li>2023.10.06: The paper is available [<a href="https://arxiv.org/abs/2310.03535" target="_blank" rel="noopener">here</a>].</li>
 			<li>2023.10.01: The online platform is avaliable.</li>
 			</ul>
 			
 			<h1>Acknowledgment</h1>
-			<p> Part of the code for this platform borrows from <a href="https://www.eecs.yorku.ca/~kamel/sidd/index.php" target="_blank" rel="noopener">SIDD</a>. Thanks to Prof. <a href="http://homepage.hit.edu.cn/jiangkui" target="_blank" rel="noopener">Kui Jiang</a> (HIT), Caihua Kong (LISTENAI) and Longgang Dai (JINGWEI HIRAIN) for supporting this project.</p>
+			<p> Part of the code for this platform borrows from <a href="https://www.eecs.yorku.ca/~kamel/sidd/index.php" target="_blank" rel="noopener">SIDD</a>. </p>
+            <p>Thanks to Prof. <a href="http://homepage.hit.edu.cn/jiangkui" target="_blank" rel="noopener">Kui Jiang</a> (HIT), Caihua Kong (LISTENAI) and Longgang Dai (JINGWEI HIRAIN) for supporting this project.</p>
 
 			<h1>License</h1>
 			<p>The all online resources are under the MIT License.</p>
