--- a/benchmark.html
+++ b/benchmark.html
@@ -89,6 +89,13 @@
                 ]
 			</p>			
 
+			<p>
+				<b>HQ-RAIN benchmark</b>
+				[
+				<b><a href="" target="_blank">Training Set</a></b> | 
+				<b><a href="" target="_blank">Testing Set</a></b> 
+                ]
+			</p>
 
 			<h1>Upload your results</h1>
 			
