--- a/benchmark.html
+++ b/benchmark.html
@@ -92,8 +92,8 @@
 			<p>
 				<b>HQ-RAIN benchmark</b>
 				[
-				<b><a href="" target="_blank">Training Set</a></b> | 
-				<b><a href="" target="_blank">Testing Set</a></b> 
+				<b><a href="https://pan.baidu.com/s/1RYTjR7nT65l1u12X2f83mA?pwd=bxrk" target="_blank">Training Set</a></b> | 
+				<b><a href="https://pan.baidu.com/s/1h5PhLf6zgnoo9cHZHZ9PHw?pwd=4zqj" target="_blank">Testing Set</a></b> 
                 ]
 			</p>
 
