--- a/benchmark.html
+++ b/benchmark.html
@@ -99,7 +99,7 @@
 
 			<h1>Upload your results</h1>
 			
-			<a href="submit.html" class="button">Click here to submit your results</a>
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdQW5kZ_wJ4LPaxH3O7FSTuZCQ0CrD9UzQnJqGnS9gshmht_A/viewform?usp=sf_link" class="button">Click here to submit your results</a>
 
 			<h1>Leaderboard</h1>
 
