--- a/submit.html
+++ b/submit.html
@@ -68,11 +68,13 @@
 			
 		<h1>Upload your results</h1>
 			
-			<p>For information on how to prepare your results, please refer to <b><a href="benchmark.html">the benchmark page</a></b>.</p>
+			<p>You can provide your deraining results (500 images) evaluated on the HQ-RAIN dataset.</p>
 
-			<p>If requestd, your results will appear on the benchmark page soon after you submit your file.</p>
+			<p>We would calculate your quantitative results (PSNR and SSIM, Y channel) and send them to your email within 1 working day.</p>
 			
-			<div class="submitForm">
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdQW5kZ_wJ4LPaxH3O7FSTuZCQ0CrD9UzQnJqGnS9gshmht_A/viewform?usp=sf_link" class="button">Click here to submit your results</a>
+
+<!-- 			<div class="submitForm">
 			<form method="post" enctype="multipart/form-data" action="upload_submission.php">
 			<p>
 			<span class="fieldName">Track: </span> <input type="text" name="method" id="method" class="input" />
@@ -84,7 +86,7 @@
 			</p>
 			<p><span class="fieldName"> </span> <input type="submit" name="submit" value="File to Submit" class="button" />
 			<span id="message" style="color:red;">&nbsp;</span>
-			</p>
+			</p> -->
 				
 			</form>
 			</div>
