--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </div>	
 		
 		<p>
-			<a href="submit.html" class="button-block">Click here to submit your results</a>
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdQW5kZ_wJ4LPaxH3O7FSTuZCQ0CrD9UzQnJqGnS9gshmht_A/viewform?usp=sf_link" class="button-block">Click here to submit your results</a>
 		</p>
 
 		<div class="entry grey-back" >
@@ -132,7 +132,7 @@
 
 			<h1>News</h1>
 			<ul>
-            <li>2023.11.01: <b>More resources will be available after the DDL of CVPR. Stay Focused! </b> </li>
+            <li>2023.12.04: The proposed HQ-RAIN is available. <b>Welcome to submit your results!</b> </li>
 			<li>2023.10.06: The paper is available [<a href="https://arxiv.org/abs/2310.03535" target="_blank" rel="noopener">here</a>].</li>
 			<li>2023.10.01: The online platform is avaliable.</li>
 			</ul>
