--- a/submit.html
+++ b/submit.html
@@ -72,7 +72,7 @@
 
 			<p>We would calculate your quantitative results (PSNR and SSIM, Y channel) and send them to your email within 1 working day.</p>
 			
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdQW5kZ_wJ4LPaxH3O7FSTuZCQ0CrD9UzQnJqGnS9gshmht_A/viewform?usp=sf_link" class="button">Click here to submit your results</a>
+			<!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQW5kZ_wJ4LPaxH3O7FSTuZCQ0CrD9UzQnJqGnS9gshmht_A/viewform?usp=sf_link" class="button">Click here to submit your results</a> -->
 
 <!-- 			<div class="submitForm">
 			<form method="post" enctype="multipart/form-data" action="upload_submission.php">
