--- a/benchmark.html
+++ b/benchmark.html
@@ -90,10 +90,15 @@
 			</p>			
 
 			<p>
-				<b>HQ-RAIN benchmark</b>
+				<b>HQ-RAIN</b>
 				[
 				<b><a href="https://pan.baidu.com/s/1RYTjR7nT65l1u12X2f83mA?pwd=bxrk" target="_blank">Training Set</a></b> | 
 				<b><a href="https://pan.baidu.com/s/1h5PhLf6zgnoo9cHZHZ9PHw?pwd=4zqj" target="_blank">Testing Set</a></b> 
+                ]
+
+				<b>RE-RAIN</b>
+				[
+				<b><a href="https://pan.baidu.com/s/10Y77VgT1Gs1D3hz5XJj8og?pwd=o9px" target="_blank">Testing Set</a></b>
                 ]
 			</p>
 
