--- a/benchmark.html
+++ b/benchmark.html
@@ -82,11 +82,11 @@
 			<p>
 				<b>Independent Training Track</b>
 				[
-				<b><a href="https://pan.baidu.com/s/1rTb4qU3fCEA4MRpQss__DA?pwd=s2yx" target="_blank">Rain200L</a></b> | 
-				<b><a href="https://pan.baidu.com/s/1KK8R2bPKgcOX8gMXSuKtCQ?pwd=z9br" target="_blank">Rain200H</a></b> |
-				<b><a href="https://pan.baidu.com/s/1aPFJExxxTBOzJjngMAOQDA?pwd=5luo" target="_blank">DID-Data</a></b> |
-				<b><a href="https://pan.baidu.com/s/1g_m7RfSUJUtknlWugO1nrw?pwd=ldzo" target="_blank">DDN-Data</a></b> |
-				<b><a href="https://pan.baidu.com/s/1YfxC5OvgYcQCffEttFz8Kg?pwd=yjow" target="_blank">SPA-Data</a></b> |
+				<b><a href="https://pan.baidu.com/s/1rTb4qU3fCEA4MRpQss__DA?pwd=s2yx" target="_blank">Rain200L</a> (s2yx) </b> | 
+				<b><a href="https://pan.baidu.com/s/1KK8R2bPKgcOX8gMXSuKtCQ?pwd=z9br" target="_blank">Rain200H</a> (z9br)</b> |
+				<b><a href="https://pan.baidu.com/s/1aPFJExxxTBOzJjngMAOQDA?pwd=5luo" target="_blank">DID-Data</a> (5luo)</b> |
+				<b><a href="https://pan.baidu.com/s/1g_m7RfSUJUtknlWugO1nrw?pwd=ldzo" target="_blank">DDN-Data</a> (ldzo)</b> |
+				<b><a href="https://pan.baidu.com/s/1YfxC5OvgYcQCffEttFz8Kg?pwd=yjow" target="_blank">SPA-Data</a> (yjow)</b> |
 				<b><a href="https://github.com/cschenxiang/DerainingSurvey_Metrics" target="_blank">Metrics</a></b> 
                 ]
 			</p>			
@@ -94,14 +94,14 @@
 			<p>
 				<b>HQ-RAIN</b>
 				[
-				<b><a href="https://pan.baidu.com/s/1RYTjR7nT65l1u12X2f83mA?pwd=bxrk" target="_blank">Training Set</a></b> | 
-				<b><a href="https://pan.baidu.com/s/1h5PhLf6zgnoo9cHZHZ9PHw?pwd=4zqj" target="_blank">Testing Set</a></b> |
+				<b><a href="https://pan.baidu.com/s/1RYTjR7nT65l1u12X2f83mA?pwd=bxrk" target="_blank">Training Set</a> (bxrk)</b> | 
+				<b><a href="https://pan.baidu.com/s/1h5PhLf6zgnoo9cHZHZ9PHw?pwd=4zqj" target="_blank">Testing Set</a> (4zqj)</b> |
 				<b><a href="https://github.com/cschenxiang/DerainingSurvey_Metrics" target="_blank">Metrics</a></b> 
                 ]
 
 				<b>RE-RAIN</b>
 				[
-				<b><a href="https://pan.baidu.com/s/10Y77VgT1Gs1D3hz5XJj8og?pwd=o9px" target="_blank">Testing Set</a></b> |
+				<b><a href="https://pan.baidu.com/s/10Y77VgT1Gs1D3hz5XJj8og?pwd=o9px" target="_blank">Testing Set</a> (o9px)</b> |
 				<b><a href="https://github.com/cschenxiang/DerainingSurvey_Metrics" target="_blank">Metrics</a></b> 
                 ]
 			</p>
