--- a/benchmark.html
+++ b/benchmark.html
@@ -96,7 +96,8 @@
 				[
 				<b><a href="https://pan.baidu.com/s/1RYTjR7nT65l1u12X2f83mA?pwd=bxrk" target="_blank">Training Set</a> (bxrk)</b> | 
 				<b><a href="https://pan.baidu.com/s/1h5PhLf6zgnoo9cHZHZ9PHw?pwd=4zqj" target="_blank">Testing Set</a> (4zqj)</b> |
-				<b><a href="https://github.com/cschenxiang/HQ-RAIN/tree/main/Metrics" target="_blank">Metrics</a></b> 
+				<b><a href="https://github.com/cschenxiang/HQ-RAIN/tree/main/Metrics" target="_blank">Metrics</a></b> |
+				<b><a href="https://github.com/cschenxiang/HQ-RAIN" target="_blank">Dropbox Download</a>  </b> 
                 ]
 
 				<b>RE-RAIN</b>
