--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 			<h1>News</h1>
 			<ul>
-            <li>2023.12.04: The proposed HQ-RAIN is available. <b>Welcome to submit your results!</b> </li>
+            <li>2023.12.04: The proposed HQ-RAIN is available. </li>
 			<li>2023.10.06: The paper is available [<a href="https://arxiv.org/abs/2310.03535" target="_blank" rel="noopener">here</a>].</li>
 			<li>2023.10.01: The online platform is avaliable.</li>
 			</ul>
