--- a/benchmark.html
+++ b/benchmark.html
@@ -96,8 +96,7 @@
 				[
 				<b><a href="https://pan.baidu.com/s/1RYTjR7nT65l1u12X2f83mA?pwd=bxrk" target="_blank">Training Set</a> (bxrk)</b> | 
 				<b><a href="https://pan.baidu.com/s/1V0U4PdJkSmkFsB3Tl_fynw?pwd=0j57" target="_blank">Testing Set</a> (0j57)</b> |
-				<b><a href="https://github.com/cschenxiang/HQ-RAIN/tree/main/Metrics" target="_blank">Metrics</a></b> |
-				<b><a href="https://github.com/cschenxiang/HQ-RAIN" target="_blank">Dropbox Download</a>  </b> 
+				<b><a href="https://github.com/cschenxiang/HQ-RAIN/tree/main/Metrics" target="_blank">Metrics</a></b> 
                 ]
 
 				<b>RE-RAIN</b>
