--- a/survey/index.html
+++ b/survey/index.html
@@ -234,6 +234,20 @@
       <div id="container-publications">
 
 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
+ <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+   <span class="article-metadata li-cite-author">
+   <span >
+    Bidirectional Multi-Scale Implicit Neural Representations for Image Deraining
+   </span>
+  <p> 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2404.01547" target="_blank" rel="noopener">CVPR'24</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenxiang/NeRD-Rain" target="_blank" rel="noopener">NeRD-Rain Code</a>
+  </p>
+ </div>
+</div> 
+
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2023">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
