--- a/survey/index.html
+++ b/survey/index.html
@@ -202,6 +202,9 @@
             <option value="*">Date</option>
             
             
+            <option value=".year-2024">
+              2024
+            </option>
             <option value=".year-2023">
               2023
             </option>
