--- a/survey/index.html
+++ b/survey/index.html
@@ -235,7 +235,115 @@
       </div>
 
       <div id="container-publications">
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
+    <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+      <span class="article-metadata li-cite-author">
+      <span >
+        Harnessing Joint Rain-/Detail-aware Representations to Eliminate Intricate Rains
+      </span>
+      <p> 
+    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2404.12091" target="_blank" rel="noopener">ICLR'24</a>
+      </p>
+    </div>
+</div> 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
+    <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+      <span class="article-metadata li-cite-author">
+      <span >
+        Efficient Frequency-Domain Image Deraining with Contrastive Regularization
+      </span>
+      <p> 
+    <a class="btn btn-outline-primary btn-page-header btn-sm" href="" target="_blank" rel="noopener">ECCV'24</a>
+    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/deng-ai-lab/FADformer" target="_blank" rel="noopener">FADformer Code</a>
+      </p>
+    </div>
+</div> 
 
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
+  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+    <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+    <span class="article-metadata li-cite-author">
+    <span >
+      Raindrop Clarity: A Dual-Focused Dataset for Day and Night Raindrop Removal
+    </span>
+    <p> 
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2407.16957" target="_blank" rel="noopener">ECCV'24</a>
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/jinyeying/RaindropClarity" target="_blank" rel="noopener">Raindrop Clarity Code</a>
+    </p>
+  </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
+  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+    <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+    <span class="article-metadata li-cite-author">
+    <span >
+      MambaIR: A Simple Baseline for Image Restoration with State-Space Model
+    </span>
+    <p> 
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2402.15648" target="_blank" rel="noopener">ECCV'24</a>
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/csguoh/MambaIR" target="_blank" rel="noopener">MambaIR Code</a>
+    </p>
+  </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
+  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+    <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+    <span class="article-metadata li-cite-author">
+    <span >
+      Learning A Spiking Neural Network for Efficient Image Deraining
+    </span>
+    <p> 
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2405.06277" target="_blank" rel="noopener">IJCAI'24</a>
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/MingTian99/ESDNet" target="_blank" rel="noopener">ESDNet Code</a>
+    </p>
+  </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
+  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+    <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+    <span class="article-metadata li-cite-author">
+    <span >
+      Explore Internal and External Similarity for Single Image Deraining with Graph Neural Networks
+    </span>
+    <p> 
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2406.00721" target="_blank" rel="noopener">IJCAI'24</a>
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/supersupercong/MSGNN" target="_blank" rel="noopener">MSGNN Code</a>
+    </p>
+  </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
+  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+    <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+    <span class="article-metadata li-cite-author">
+    <span >
+      Rethinking Multi-Scale Representations in Deep Deraining Transformer
+    </span>
+    <p> 
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="" target="_blank" rel="noopener">AAAI'24</a>
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/cschenhm/MSDT" target="_blank" rel="noopener">MSDT Code</a>
+    </p>
+  </div>
+</div> 
+
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
+    <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+     <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+      <span class="article-metadata li-cite-author">
+      <span >
+        Adapt or Perish: Adaptive Sparse Transformer with Attentive Feature Refinement for Image Restoration
+      </span>
+     <p> 
+   <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://openaccess.thecvf.com/content/CVPR2024/html/Zhou_Adapt_or_Perish_Adaptive_Sparse_Transformer_with_Attentive_Feature_Refinement_CVPR_2024_paper.html" target="_blank" rel="noopener">CVPR'24</a>
+   <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/joshyZhou/AST" target="_blank" rel="noopener">AST Code</a>
+     </p>
+    </div>
+   </div> 
 
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
  <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
