--- a/survey/index.html
+++ b/survey/index.html
@@ -201,7 +201,9 @@
           <select class="pub-filters form-control form-control-sm" data-filter-group="year">
             <option value="*">Date</option>
             
-            
+            <option value=".year-2025">
+              2025
+            </option>            
             <option value=".year-2024">
               2024
             </option>
@@ -235,6 +237,18 @@
       </div>
 
       <div id="container-publications">
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2025">
+    <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+      <span class="article-metadata li-cite-author">
+      <span >
+        Channel Consistency Prior and Self-Reconstruction Strategy Based Unsupervised Image Deraining
+      </span>
+      <p> 
+    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2503.18703" target="_blank" rel="noopener">CVPR'25</a>
+      </p>
+    </div>
+</div> 
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2024">
     <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
