--- a/survey/index.html
+++ b/survey/index.html
@@ -170,7 +170,7 @@
 <!-- publications -->
 
 <div class="universal-wrapper pt-1">
- <h5>Note: For the following papers on image restoration, we only include the image restoration work validated on the deraining task in their paper. If you would like to add your paper, please contact chenxiang@njust.edu.cn.</h5> 
+ <h5>If you would like to add your paper, please contact chenxiang@njust.edu.cn.</h5> 
 </div>
   
 <div class="universal-wrapper">
